2012-06-28   D. V. Wiebe <getdata@ketiltrout.net> svn:725,726
	* util/checkdirfile.c: Find and report dangling aliases.

	* bindings/python/pydirfile.c (gdpy_dirfile_nentries gdpy_dirfile_entrylist)
	bindings/cxx/dirfile.cpp (Dirfile::NEntries Dirfile::EntryList)
	bindings/perl/GetData.xs (entry_list) : Fix signedness of "type".
	* bindings/idl/getdata.c (gdidl_get_field_list gdidl_get_nfields): Deal with
	/ALIASES.
	* bindings/make_parameters.c: Add GD_ALIAS_ENTRIES.

	* test/nentries_noalias.c test/elist_noalias.c: Renamed from ..._alias.c.
	* test/nentries_alias.c test/elist_alias.c: Added.

	* src/internal.h getdata.h.in: Move GD_ALIAS_ENTRY to public header.
	* src/getdata.h.in: Define GD_ALIAS_ENTRIES.
	* src/field_list.c (_GD_EntryIndex _GD_ListEntry) src/nfields.c
	(_GD_NEntries): Handle GD_ALIAS_ENTRIES.

	* src/common.c (_GD_CanonicalPath): Sidestep GCC warning.

2012-06-27   D. V. Wiebe <getdata@ketiltrout.net> svn:724
	* src/name.c (_GD_UpdateScalar _GD_InvalidateConst _GD_UpdateInField
	_GD_InvalidateVect): Handle aliases.
	* src/name.c (gd_rename): Don't dereference aliases.
	* src/name.c (gd_rename_alias): Deleted.
	* test/name.c test/name_updb_const.c test/name_updb.c: Updated.
	* test/name_updb_const_alias.c test/name_move_alias.c test/name_alias.c
	test/name_updb_alias.c: Added.
	* test/name_after_const.c test/name_after.c: Deleted.

	* src/parse.c (_GD_ResolveAlias): Reset aliases if requested.

	* man/make_html.pl: Don't eat "**" in synopses.

2012-06-25   D. V. Wiebe <getdata@ketiltrout.net> svn:723
	* src/flush.c (_GD_FindVersion): ALIAS means >= 9.

	* util/checkdirfile.c: Grammar.

2012-06-13   D. V. Wiebe <getdata@ketiltrout.net> svn:721
	GetData-0.8.0rc2.

2012-06-04   D. V. Wiebe <getdata@ketiltrout.net> svn:720
	* bindings/cxx/dirfile.cpp bindings/cxx/fragment.cpp
	bindings/cxx/getdata/dirfile.h bindings/cxx/getdata/fragment.h: off_t
	-> gd_off64_t.

2012-06-02   D. V. Wiebe <getdata@ketiltrout.net> svn:717