@@ -49,13 +49,13 @@ static const char *gdpy_exception_list[GD_N_ERROR_CODES] = {
   "BadReference",
   "Protected",
   "Deletion",
-  "BadArgument",
+  "Argument",
   "Callback",
   "Exists",
   "UncleanDatabase",
   "Domain",
   "BadRepr",
-  "BadVersion",
+  NULL,
   "Flush",
   "Bounds",
   "LineTooLong"
